# datawarrior_clustersort

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  Makefile  README.html  README.md  README.org  datawarrior_clustersort.py  pyproject.toml  pytest.ini  requirements-dev.txt
.github/workflows/: build_wheel.yml  pytest.yml  pytest_mypy.yml  tox.yml
datawarrior_clustersort/: __init__.py
docs/: README.md  README.rst
src/app/: datawarrior_clustersort.py
src/datawarrior_clustersort/: __init__.py  datawarrior_clustersort.py
test_data/: 100Random_Molecules_sort.txt
tests/: 100Random_Molecules.dwar  100Random_Molecules.txt  100Random_Molecules_rev_sort_ref.txt  100Random_Molecules_sort.txt  record_number.dwam  test_blackbox.py  test_datawarrior_clustersort.py  test_with_imports.py
