[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datawarrior_clustersort"
version = "0.1.2"
requires-python = ">=3.10"
authors = [
    { name="Norwid Behrnd", email="nbehrnd@yahoo.com" }
]
description = "reassign DW cluster labels by their popularity"
readme = "docs/README.rst"

license-files = ["LICENSE"]
keywords = ["datawarrior", "cluster"]

# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
]

dependencies = []  # None (it works with Python's standard library alone)

[project.optional-dependencies]
dev = [
    "build>=1.2.2.post1",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "ruff>=0.15.4",
]

[project.urls]
Homepage = "https://github.com/nbehrnd/datawarrior_clustersort"

[project.scripts]
datawarrior_clustersort = "app.datawarrior_clustersort:main"

[tool.setuptools.package-data]
"datawarrior_clustersort" = ["docs/README.md", "tests/*.txt", "tests/*.dwar"]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = "tests"
filterwarnings = "ignore::pytest.PytestCacheWarning"
markers = [
    "blackbox: a black-box test",
    "imported: a test which imports a function of the script",
]

[tool.ruff]
line-length = 90
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
